src/content/docs/v17/10-getting-started/30-translation-files.mdx
---
title: Loading Translation Files
description: How to load and use translation files with @ngx-translate/core
slug: v17/getting-started/translation-files
---

import {Tabs, TabItem, CardGrid, LinkCard} from "@astrojs/starlight/components";
import { PackageManagers } from 'starlight-package-managers'
import { FileTree } from '@astrojs/starlight/components';
import { Badge } from '@astrojs/starlight/components';

**@ngx-translate/core** doesn't come with a loader. The reason for this is to keep the
module as small as possible and to make it adaptable to your needs.

However, there's an official plugin called **`@ngx-translate/http-loader`** that you can use to implement
a dynamic loader.

## Static Translations via `import`

The easiest way to set translation data is by using `import` and [`setTranslation()`](/v17/reference/translate-service-api/#settranslation).

```ts {1,4} title="src/app/app.component.ts"
import translationsEN from "../../public/i18n/en.json";
...
constructor(private translate: TranslateService) {
    translate.setTranslation('en', translationsEN);
    translate.setFallbackLang('en');
}
```

The advantage of this approach is that your translations are available immediately when loading the app.
The big disadvantage is that this binds all translations into your app. If you have many
texts and languages, this might bloat your application and slow down startup time.

## Loading translations dynamically

`ngx-translate` comes with `TranslateHttpLoader`, which loads translation files
using `HttpClient`. To use it, you need to install the `http-loader` package from
`@ngx-translate`:

<PackageManagers pkg={"@ngx-translate/http-loader"} />

Here's how you can use the `TranslateHttpLoader` to load
translations from `"/assets/i18n/[lang].json"`. `[lang]` is the language that you're using, for English it could be `en`.

The `TranslateHttpLoader` uses dependency injection and configuration through the `provideTranslateHttpLoader()` function. You can customize the paths by passing configuration options:

```ts
// Default configuration loads from "/assets/i18n/" with ".json" suffix
provideTranslateHttpLoader()

// Custom configuration for different paths
provideTranslateHttpLoader({
    prefix: './i18n/',
    suffix: '.json'
})
```

In newer versions of Angular, the `assets` folder is no longer used. Instead,
translations are stored in the `public` folder. You can configure this using the `prefix` option as shown above.

### Configuration

```ts {2-4,9-14} title="app.config.ts"
import {ApplicationConfig, provideZoneChangeDetection} from "@angular/core";
import {provideHttpClient} from "@angular/common/http";
import {provideTranslateService, provideTranslateLoader} from "@ngx-translate/core";
import {provideTranslateHttpLoader} from '@ngx-translate/http-loader';

export const appConfig: ApplicationConfig = {
  providers: [
    provideZoneChangeDetection({ eventCoalescing: true }),
    provideHttpClient(),
    provideTranslateService({
      loader: provideTranslateHttpLoader({prefix:'./i18n/', suffix:'.json'}),
      fallbackLang: 'en'
    })
  ],
};
```

For comprehensive information about using ngx-translate with NgModules, see the [NgModules Support](/v17/reference/ngmodules/) documentation.

ngx-translate uses JSON translation files by default when using the `TranslateHttpLoader`.
These files have the added benefit of being easily embedded directly into your application
using `import`.

The modular design of ngx-translate also makes it easy to switch to other file formats
by implementing your own [loader](/v17/reference/translate-loader-api/) or using one of the
[plugins](/v17/resources/plugins/).

## Where to store the Translation Files

In older Angular versions, translation files are typically stored in the `/src/assets/i18n` folder.
Starting with Angular 18+, the `assets` folder is no longer available, so use the `public` folder instead.

<FileTree>
  * public
    * i18n
      * de.json
      * en.json
  * src/
</FileTree>

We recommend that you use an `i18n` folder within the `assets` or `public` folder to organize your translation files in one place.

## Translation file formats

ngx-translate supports two basic types of translation file structures: flat and
nested.

The **nested structure** enforces a tree hierarchy, which can be more intuitive
to display in editors. This structure is less repetitive and may result in
smaller file sizes.

**Flat Structure**

```json title=public/i18n/en.json
{
  "app.hello": "hello {{value}}",
  "app.title": "Translation Demo"
}
```

**Nested Structure** <Badge text="preferred" variant="tip" size="small" />

```json
{
  "app": {
    "hello": "hello {{value}}",
    "title": "Translation Demo"
  }
}
```

You should choose one structure and avoid mixing flat and nested structures, as
this can lead to confusion and inconsistency in your translation files.

## Managing Translations

We highly recommend using [BabelEdit](https://www.codeandweb.com/babeledit) to manage your translations.
BabelEdit allows you to edit all JSON translation files at once, ensuring consistency across them.
Features like PreTranslate also provide a fast preview of your application in other languages.

## Why Use Contextual IDs like `app.title`?

Using keys like `app.title` provides valuable context to both translators and
developers.

For **translators**, it helps clarify where and how the translation will be
used. Instead of seeing isolated text strings, they can interpret the purpose
of the text based on the structure of the key. For example, `app.title`
indicates that the string is the title of an application, reducing ambiguity
and improving translation accuracy.

For **developers**, grouping keys by components or modules (e.g., `header.title`,
`header.login-link`) makes it easier to manage and maintain translation files. This
structured approach helps organize related translations, simplifying updates
and ensuring consistency across different parts of the application.

Additionally, it allows for different translations of the same word depending
on the context. For example, in a table heading where space is limited, you
might need to use an abbreviation in one language. IDs keys make this
possible without confusion.

## Using Translation Text as IDs

Using translation texts as IDs might seem tempting, and there are two main
advantages:

1. **Fallback**: The translation texts will always act as the fallback, so if a
   translation is missing, the default text is already in place instead of the translation ID.

2. **Simplicity**: It can be easier to simply wrap strings with translation
   functions or pipes, as no separate ID management is required.

However, there are several major disadvantages:

1. **Fragility**: Small changes in the main language will break the connection
   to all translations. For each change, you'll need to update the IDs in every
   translation file.

2. **Context-specific translations**: Translations cannot differ depending on
   their use. For example, you might use an abbreviation for a word in a table
   but the full word in another context.

3. **Context for translators**: IDs provide valuable context to translators.
   They understand where a text is used and can choose the most suitable
   translation for that context.

4. **Grouping by component or module**: Hierarchical IDs automatically create
   groups, making it easy to identify which module or component an ID is used
   in.
